--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #000; /* Changed background color to black */
+            color: #fff; /* Changed text color to white for better readability */
         }
         header {
             background-color: #333;
@@ -84,7 +85,7 @@
     <main>
         <section id="home">
             <h2>Welcome to The Redliner</h2>
-            <p>This is a basic template for your new website.</p>
+            <p>Let's Roll!!</p>
         </section>
         <section id="about">
             <h2>About Us</h2>
@@ -130,9 +131,4 @@ Feel free to use this for your website or any other professional context!</p>
             <p>Visit our YouTube channel for more videos: <a href="https://www.youtube.com/@redliner_madhu" target="_blank">The Redliner YouTube Channel</a></p>
         </section>
         <section id="contact">
-            <h2>Contact Us</h2>
-            <p>How to get in touch with The Redliner.</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 The Redliner. All rights
+            <h2>Contact
