--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
             }
         }
     </style>
+    <script>
+        function openVideo(url) {
+            window.open(url, '_blank');
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -85,7 +90,7 @@
     <main>
         <section id="home">
             <h2>Welcome to The Redliner</h2>
-            <p>Let's Roll!!</p>
+            <p>This is a basic template for your new website.</p>
         </section>
         <section id="about">
             <h2>About Us</h2>
@@ -101,34 +106,60 @@ Feel free to use this for your website or any other professional context!</p>
             <h2>Our Videos</h2>
             <div class="videos">
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/toatpoaaOvM?si=69kX9XzK1bhj9VFB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/toatpoaaOvM?si=69kX9XzK1bhj9VFB')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/toatpoaaOvM?si=69kX9XzK1bhj9VFB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/9pJVpI6C18k?si=VrR-yHr9MPWUbQaD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/9pJVpI6C18k?si=VrR-yHr9MPWUbQaD')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/9pJVpI6C18k?si=VrR-yHr9MPWUbQaD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/8s_rgwXt4iY?si=eQMHEVtk2ezM1qhC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/8s_rgwXt4iY?si=eQMHEVtk2ezM1qhC')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/8s_rgwXt4iY?si=eQMHEVtk2ezM1qhC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/lz1NumlwluQ?si=1IKA0nU_TcjHmTiD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/lz1NumlwluQ?si=1IKA0nU_TcjHmTiD')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/lz1NumlwluQ?si=1IKA0nU_TcjHmTiD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/oJe-vpRqJxo?si=npfxdyOGYtDEMdDv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/oJe-vpRqJxo?si=npfxdyOGYtDEMdDv')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/oJe-vpRqJxo?si=npfxdyOGYtDEMdDv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/6I5WE0K00oA?si=C-GX3Jt5_Y3oULpn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/6I5WE0K00oA?si=C-GX3Jt5_Y3oULpn')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/6I5WE0K00oA?si=C-GX3Jt5_Y3oULpn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/tLKnoljeQtU?si=qKuMQAu1L6rlOm_y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/tLKnoljeQtU?si=qKuMQAu1L6rlOm_y')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/tLKnoljeQtU?si=qKuMQAu1L6rlOm_y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/sB3HQ95_6Do?si=0ck-dKXw-mkw1m6x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/sB3HQ95_6Do?si=0ck-dKXw-mkw1m6x')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/sB3HQ95_6Do?si=0ck-dKXw-mkw1m6x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
                 <div class="video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/NXXFJeZMA9Y?si=47gsfy8Q13PlsUkp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <a href="javascript:void(0)" onclick="openVideo('https://www.youtube.com/embed/NXXFJeZMA9Y?si=47gsfy8Q13PlsUkp')">
+                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/NXXFJeZMA9Y?si=47gsfy8Q13PlsUkp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </a>
                 </div>
             </div>
             <p>Visit our YouTube channel for more videos: <a href="https://www.youtube.com/@redliner_madhu" target="_blank">The Redliner YouTube Channel</a></p>
         </section>
         <section id="contact">
-            <h2>Contact
+            <h2>Contact Us</h2>
+            <p>How to get in touch with The Redliner.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 The Redliner. All rights
+    </footer>
+</body>
+</html>
