--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </nav>
     <main>
         <section id="home">
-            <h2>Welcome to The Redliner</h2>
-            <p>This is a basic template for your new website.</p>
+            <h2>Hello Redliners!!</h2>
+            <p>Let's Burn some fuel</p>
         </section>
         <section id="about">
             <h2>About Us</h2>
