--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
             bottom: 0;
             width: 100%;
         }
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25D366;
+            color: white;
+            border: none;
+            border-radius: 50px;
+            padding: 10px 20px;
+            font-size: 20px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -58,15 +70,12 @@
     </header>
     <nav>
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
         <a href="videos.html">Videos</a>
-        <a href="#contact">Contact</a>
     </nav>
     <main>
         <section id="home">
-            <h2>Hello Redliners!!</h2>
-            <p>Let's Burn some fuel</p>
+            <h2>Welcome to The Redliner</h2>
+            <p>This is a basic template for your new website.</p>
         </section>
         <section id="about">
             <h2>About Us</h2>
@@ -74,17 +83,14 @@
 
 Feel free to use this for your website or any other professional context!</p>
         </section>
-        <section id="services">
-            <h2>Our Services</h2>
-            <p>Details about the services offered by The Redliner.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>How to get in touch with The Redliner.</p>
-        </section>
     </main>
     <footer>
         <p>&copy; 2024 The Redliner. All rights reserved.</p>
     </footer>
+
+    <!-- WhatsApp Button -->
+    <button class="whatsapp-button" onclick="window.open('https://wa.me/9962508325', '_blank')">
+        Chat with us
+    </button>
 </body>
 </html>
