--- a/videos.html
+++ b/videos.html
@@ -44,10 +44,22 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
+            padding: 5px 0; /* Reduced padding to make the footer thinner */
             position: fixed;
             bottom: 0;
             width: 100%;
+        }
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25D366;
+            color: white;
+            border: none;
+            border-radius: 50px;
+            padding: 10px 20px;
+            font-size: 20px;
+            cursor: pointer;
         }
         .videos {
             display: flex;
@@ -77,10 +89,7 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
         <a href="videos.html">Videos</a>
-        <a href="#contact">Contact</a>
     </nav>
     <main>
         <section id="videos">
