--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             background-color: #333;
             color: #fff;
             text-align: center;
-            padding: 10px 0;
+            padding: 5px 0; /* Reduced padding to make the footer thinner */
             position: fixed;
             bottom: 0;
             width: 100%;
