--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
     </nav>
     <main>
         <section id="home">
-            <h2>Welcome to The Redliner</h2>
-            <p>This is a basic template for your new website.</p>
+            <h2>Hello Redliners</h2>
+            <p>Let's learn and Burn!</p>
         </section>
         <section id="about">
-            <h2>About Us</h2>
+            <h2>About Me</h2>
             <p>Hello, I’m Madhusudan Rajan. I have a deep passion for motorcycles, enjoying both touring and off-road adventures, as well as pushing the limits on the race track. On weekends, you’ll often find me in my garage, assisting friends with bike repairs and providing motorcycle maintenance services.
 
 Feel free to use this for your website or any other professional context!</p>
