--- a/videos.html
+++ b/videos.html
@@ -40,15 +40,6 @@
         main {
             padding: 20px;
         }
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 5px 0; /* Reduced padding to make the footer thinner */
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
         .whatsapp-button {
             position: fixed;
             bottom: 20px;
@@ -126,8 +117,9 @@
             <p>Visit our YouTube channel for more videos: <a href="https://www.youtube.com/@redliner_madhu" target="_blank">The Redliner YouTube Channel</a></p>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 The Redliner. All rights reserved.</p>
-    </footer>
+    <!-- WhatsApp Button -->
+    <button class="whatsapp-button" onclick="window.open('https://wa.me/1234567890', '_blank')">
+        Chat with us
+    </button>
 </body>
 </html>
